Cambio HashSet por Set